@@ -1,3 +1,7 @@
+AUX iso-8859-7.def 4419 RMD160 89cec35cd02edb20aee902ef3291fb0b24b0a5aa SHA1 c1e6b8fcf237d4e4752f4809ee36aa80120f9bd2 SHA256 416c45c4b7578414ba62094b95923dfd58571256b7267246ee3f2025f09111dc
+MD5 6f48f0b987b7ea33b02aea8ba198eeed files/iso-8859-7.def 4419
+RMD160 89cec35cd02edb20aee902ef3291fb0b24b0a5aa files/iso-8859-7.def 4419
+SHA256 416c45c4b7578414ba62094b95923dfd58571256b7267246ee3f2025f09111dc files/iso-8859-7.def 4419
 AUX pst-circ.pro 661 RMD160 035f7330b14c46c2a92069147e30b2de4f4764f0 SHA1 81f22fcf880e99d258c17488156742740e6751fe SHA256 0d6f2fbcc4f8aa69f8974fcc803be6748407fe1ad64181c357364bdd308919e4
 MD5 0af0914e8f5e5ff82aa119d67e983a55 files/pst-circ.pro 661
 RMD160 035f7330b14c46c2a92069147e30b2de4f4764f0 files/pst-circ.pro 661
@@ -101,22 +105,22 @@ DIST tetex-src-3.0_p1.tar.gz 13357541 RMD160 24d5029619675ce597782562bc1b8705223
 DIST tetex-texmf-2.0.2.tar.gz 52424280 RMD160 ff88622c2d97416a4f67fbdf7a00d837af35d94e SHA1 9ad88d5fc1df7e10b3538f7b5e3871ceefe8ee2f SHA256 0d5c4adb7a72a33fffa9eeb5e3137e0094c912eafc45e358ca20cd9257f79f0d
 DIST tetex-texmf-3.0.tar.gz 91762123 RMD160 67cb6325f1edbea89c4723791116717190ec73c4 SHA1 10f7d2fa007c95ca066d899fca0e9a8446108824 SHA256 88fd25d86888f264306e109961be791e2c0686c88035beed6a984dced5093ebe
 DIST tetex-texmfsrc-2.0.2.tar.gz 22909537 RMD160 bc444152b2f45cf3c0a743f6416134e31e8635b4 SHA1 59c5a328800225c44beec9a9baf0f4223ac633c3 SHA256 9348f10c9e95fdb5e9a9702956cfce38be42c48621fcfc6c9ae192363e08d267
-EBUILD tetex-2.0.2-r9.ebuild 1965 RMD160 e3541e585d6c78a66a5252916b4b0ae0931b30e2 SHA1 4c3c33a6ecd352616fa6023f87d61d5b2883291b SHA256 b1b5ab0414af982f2dccacb4161b7bb5a92315cb5281454611f6513022bf6c56
-MD5 e785553d358f06a4ba9630698503e341 tetex-2.0.2-r9.ebuild 1965
-RMD160 e3541e585d6c78a66a5252916b4b0ae0931b30e2 tetex-2.0.2-r9.ebuild 1965
-SHA256 b1b5ab0414af982f2dccacb4161b7bb5a92315cb5281454611f6513022bf6c56 tetex-2.0.2-r9.ebuild 1965
-EBUILD tetex-3.0_p1-r3.ebuild 2550 RMD160 0ba587821afb2e0754036ad232f1275c912ee4ba SHA1 0a092fb13c045190714f0217c5ce6413304a73a5 SHA256 e07009cbe14f91420912ab73232fb1f70230ccfa15f482472b2cb0c612e5bf11
-MD5 571c01207075923f646a7952ea8a0a19 tetex-3.0_p1-r3.ebuild 2550
-RMD160 0ba587821afb2e0754036ad232f1275c912ee4ba tetex-3.0_p1-r3.ebuild 2550
-SHA256 e07009cbe14f91420912ab73232fb1f70230ccfa15f482472b2cb0c612e5bf11 tetex-3.0_p1-r3.ebuild 2550
-MISC ChangeLog 25039 RMD160 5b4c19f2fae4b9b9dd999fb275d617c5fef32d82 SHA1 11d4ac1a4b277d7be99a13054d73e1c59eac4ed4 SHA256 a9fb383488b8c699db41425ae233734990f41bcf2700c24aef448ff426928cae
-MD5 6ab4d074f05999a19730d4ac6d127e05 ChangeLog 25039
-RMD160 5b4c19f2fae4b9b9dd999fb275d617c5fef32d82 ChangeLog 25039
-SHA256 a9fb383488b8c699db41425ae233734990f41bcf2700c24aef448ff426928cae ChangeLog 25039
-MISC metadata.xml 164 RMD160 698422e821458386b8da17baa6014296f8284e0b SHA1 a805613d38e6e3bff93cba3858d6a92cc79fe2f7 SHA256 7bd4d93c657a26aa9af1dea4232520c0d388cc92115dd9ca0eb04259228e044f
-MD5 c472f5fd1646eb8bca71d8df5cb2bdcc metadata.xml 164
-RMD160 698422e821458386b8da17baa6014296f8284e0b metadata.xml 164
-SHA256 7bd4d93c657a26aa9af1dea4232520c0d388cc92115dd9ca0eb04259228e044f metadata.xml 164
+EBUILD tetex-2.0.2-r9.ebuild 1967 RMD160 0b5618938b7203476a691a8dc7e4a88ac7122054 SHA1 2d1508a09b4c3e7efd458944c623939d610a6030 SHA256 07fb0242ae0bf823e30cb575a983bfaf8bb9bd8cf8680c69e260c8a4ff94ffb6
+MD5 73a0173039542796825da4bea269dcfa tetex-2.0.2-r9.ebuild 1967
+RMD160 0b5618938b7203476a691a8dc7e4a88ac7122054 tetex-2.0.2-r9.ebuild 1967
+SHA256 07fb0242ae0bf823e30cb575a983bfaf8bb9bd8cf8680c69e260c8a4ff94ffb6 tetex-2.0.2-r9.ebuild 1967
+EBUILD tetex-3.0_p1-r3.ebuild 2508 RMD160 db5ccb73a7e3e415d98773f649201858157c5c9f SHA1 f23f83b78786cab7d7e52c5ea88377fbe8be5d2d SHA256 168ee9991c84d2f31cf7ebb4036bfe2569aceba6819fbf02eb4a14febb35a95c
+MD5 f2a187259ba6805d4f44ab6fff9b5f23 tetex-3.0_p1-r3.ebuild 2508
+RMD160 db5ccb73a7e3e415d98773f649201858157c5c9f tetex-3.0_p1-r3.ebuild 2508
+SHA256 168ee9991c84d2f31cf7ebb4036bfe2569aceba6819fbf02eb4a14febb35a95c tetex-3.0_p1-r3.ebuild 2508
+MISC ChangeLog 25407 RMD160 163d735cce70d173120b25b2b2935184bffd7555 SHA1 cfec439f81604c30e82e8668221a37f247e3898c SHA256 7c4024a9887e71a6df0037b56066057c87ec1fb34367c44ba59deed102eace5d
+MD5 14a6e3ce0b050cfc190358765ab7acc8 ChangeLog 25407
+RMD160 163d735cce70d173120b25b2b2935184bffd7555 ChangeLog 25407
+SHA256 7c4024a9887e71a6df0037b56066057c87ec1fb34367c44ba59deed102eace5d ChangeLog 25407
+MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
+MD5 504d11dd034a4ba8f06e8e7c633d13ba metadata.xml 156
+RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 metadata.xml 156
+SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6 metadata.xml 156
 MD5 22d6dcce2ae5229c5ba109e6638041ef files/digest-tetex-2.0.2-r9 1030
 RMD160 2575064189200d3d022f6a39736291f7757a862e files/digest-tetex-2.0.2-r9 1030
 SHA256 6c98bb9cfb053bd9cf0bb0fedb62459df5500fcb1c6e91d8625208574f4a773e files/digest-tetex-2.0.2-r9 1030
