@@ -1,0 +1,144 @@
+ \ProvidesFile{iso-8859-7.def}
+   [2000/05/28 v1.2 Greek input encoding file]
+\message{iso-8859-7 input encoding file by Apostolos Syropoulos with modifications by C.Beccari)}
+\DeclareInputText{128}{\textbullet}
+\DeclareInputText{129}{\textbullet}
+\DeclareInputText{130}{\textbullet}
+\DeclareInputText{131}{\textbullet}
+\DeclareInputText{132}{\textbullet}
+\DeclareInputText{133}{\textbullet}
+\DeclareInputText{134}{\textbullet}
+\DeclareInputText{135}{\textbullet}
+\DeclareInputText{136}{\textbullet}
+\DeclareInputText{137}{\textbullet}
+\DeclareInputText{138}{\textbullet}
+\DeclareInputText{139}{\textbullet}
+\DeclareInputText{140}{\textbullet}
+\DeclareInputText{141}{\textbullet}
+\DeclareInputText{142}{\textbullet}
+\DeclareInputText{143}{\textbullet}
+\DeclareInputText{144}{\textbullet}
+\DeclareInputText{145}{``}
+\DeclareInputText{146}{''}
+\DeclareInputText{147}{``}
+\DeclareInputText{148}{''}
+\DeclareInputText{149}{\textbullet}
+\DeclareInputText{150}{\textbullet}
+\DeclareInputText{151}{\textbullet}
+\DeclareInputText{152}{\textbullet}
+\DeclareInputText{153}{\textbullet}
+\DeclareInputText{154}{\textbullet}
+\DeclareInputText{155}{\textbullet}
+\DeclareInputText{156}{\textbullet}
+\DeclareInputText{157}{\textbullet}
+\DeclareInputText{158}{\textbullet}
+\DeclareInputText{159}{\textbullet}
+\DeclareInputText{160}{\textbullet}
+\DeclareInputText{161}{\textbullet}
+\DeclareInputText{162}{'A}
+\DeclareInputText{163}{\textbullet}
+\DeclareInputText{164}{\textbullet}
+\DeclareInputText{165}{\textbullet}
+\DeclareInputText{166}{\textbullet}
+\DeclareInputText{167}{\textbullet}
+\DeclareInputText{168}{\textbullet}
+\DeclareInputText{169}{\textbullet}
+\DeclareInputText{170}{\textbullet}
+\DeclareInputText{171}{((}
+\DeclareInputText{172}{\textbullet}
+\DeclareInputText{173}{\textbullet}
+\DeclareInputText{174}{\textbullet}
+\DeclareInputText{175}{\textbullet}
+\DeclareInputText{176}{\textbullet}
+\DeclareInputText{177}{\textbullet}
+\DeclareInputText{178}{\textbullet}
+\DeclareInputText{179}{\textbullet}
+\DeclareInputText{180}{\textbullet}
+\DeclareInputText{181}{\textbullet}
+\DeclareInputText{182}{'A}
+\DeclareInputText{183}{\textbullet}
+\DeclareInputText{184}{'E}
+\DeclareInputText{185}{'H}
+\DeclareInputText{186}{'I}
+\DeclareInputText{187}{))}
+\DeclareInputText{188}{'O}
+\DeclareInputText{189}{\textbullet}
+\DeclareInputText{190}{'U}
+\DeclareInputText{191}{'W}
+%\DeclareInputText{192}{"'i}
+\chardef\idiaerac=242
+\DeclareInputText{192}{\char\idiaerac}
+\DeclareInputText{193}{A}
+\DeclareInputText{194}{B}
+\DeclareInputText{195}{G}
+\DeclareInputText{196}{D}
+\DeclareInputText{197}{E}
+\DeclareInputText{198}{Z}
+\DeclareInputText{199}{H}
+\DeclareInputText{200}{J}
+\DeclareInputText{201}{I}
+\DeclareInputText{202}{K}
+\DeclareInputText{203}{L}
+\DeclareInputText{204}{M}
+\DeclareInputText{205}{N}
+\DeclareInputText{206}{X}
+\DeclareInputText{207}{O}
+\DeclareInputText{208}{P}
+\DeclareInputText{209}{R}
+\DeclareInputText{210}{\textbullet}
+\DeclareInputText{211}{S}
+\DeclareInputText{212}{T}
+\DeclareInputText{213}{U}
+\DeclareInputText{214}{F}
+\DeclareInputText{215}{Q}
+\DeclareInputText{216}{Y}
+\DeclareInputText{217}{W}
+%\DeclareInputText{218}{"I}
+%\DeclareInputText{219}{"U}
+\chardef\Idiaer=219
+\chardef\Udiaer=223
+\DeclareInputText{218}{\char\Idiaer}
+\DeclareInputText{219}{\char\Udiaer}
+\DeclareInputText{220}{'a}
+\DeclareInputText{221}{'e}
+\DeclareInputText{222}{'h}
+\DeclareInputText{223}{'i}
+%\DeclareInputText{224}{"'u}
+\chardef\udiaerac=246
+\DeclareInputText{224}{\char\udiaerac}
+\DeclareInputText{225}{a}
+\DeclareInputText{226}{b}
+\DeclareInputText{227}{g}
+\DeclareInputText{228}{d}
+\DeclareInputText{229}{e}
+\DeclareInputText{230}{z}
+\DeclareInputText{231}{h}
+\DeclareInputText{232}{j}
+\DeclareInputText{233}{i}
+\DeclareInputText{234}{k}
+\DeclareInputText{235}{l}
+\DeclareInputText{236}{m}
+\DeclareInputText{237}{n}
+\DeclareInputText{238}{x}
+\DeclareInputText{239}{o}
+\DeclareInputText{240}{p}
+\DeclareInputText{241}{r}
+\DeclareInputText{242}{s}
+\DeclareInputText{243}{s}
+\DeclareInputText{244}{t}
+\DeclareInputText{245}{u}
+\DeclareInputText{246}{f}
+\DeclareInputText{247}{q}
+\DeclareInputText{248}{y}
+\DeclareInputText{249}{w}
+%\DeclareInputText{250}{"i}
+%\DeclareInputText{251}{"u}
+\chardef\idiaer=240
+\chardef\udiaer=244
+\DeclareInputText{250}{\char\idiaer}
+\DeclareInputText{251}{\char\udiaer}
+\DeclareInputText{252}{'o}
+\DeclareInputText{253}{'u}
+\DeclareInputText{254}{'w}
+\DeclareInputText{255}{\textbullet}
+\endinput
